Añadidos algunos ejercicios de arrays

--- a/UD4/Arrays/Ejercicio 4b6/index.html
+++ b/UD4/Arrays/Ejercicio 4b6/index.html
@@ -28,7 +28,7 @@
 
   <h2>Solución</h2>
   <form>
-    <input type="text" id="txtNombre">
+    <input type="text" id="txtNombre"><br>
     <button type="button" id="btnAnadir">Añadir</button>
     <button type="button" id="btnMostrar">Mostrar</button>
     <button type="button" id="btnEliminar">Eliminar</button>
