Algunos ejercicios de la parte 5b

--- a/UD5/5b dialógos/Gestión de diálogos/películas.html
+++ b/UD5/5b dialógos/Gestión de diálogos/películas.html
@@ -50,9 +50,9 @@
       </div>
 
       <div class="dialog-footer">
-        <button value="cancel" class="btn-secondary" type="button" popovertarget="dialogoPelicula" 
+        <button class="btn-secondary" type="button" popovertarget="dialogoPelicula" 
         popovertargetaction="hide">Cancelar</button>
-        <button value="default" class="btn-save" >Guardar</button>
+        <button class="btn-save" >Guardar</button>
       </div>
     </form>
   </dialog>
