--- a/UD5/5b dialógos/Ej5b-5/index.html
+++ b/UD5/5b dialógos/Ej5b-5/index.html
@@ -21,6 +21,6 @@
 
     <h2>Solución</h2>
     <p>Escribe en la división de abajo.</p>
-    <div id="divEditable" contenteditable style="overflow:scroll;width:500px;height:200px;background-color: #6663;outline:0;padding:0.5rem;margin-bottom: 7rem;"></div>
+    <div id="divEditable" contenteditable style="overflow:scroll;width:500px;height:200px;background-color: #6663;outline:0;padding:0.5rem;margin-bottom: 7rem;" autocorrect="false"></div>
 </body>
 </html>
